# fastmcp_email_server

./: .gitignore  README.md  pyproject.toml
src/fastmcp_email_server/: __init__.py  __main__.py  email_config.py  receive_163.py  send_163.py  server.py
