[project]
name = "fastmcp-email-server"
version = "0.1.0"
description = "FastMCP 邮件收发 MCP 服务器"
readme = "README.md"
authors = [{ name = "Cocktail_py" }]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "build>=1.3.0",
    "mcp[cli]>=1.15.0",
    "twine>=6.2.0",
]

[project.scripts]
fastmcp-email-server = "fastmcp_email_server:main"

[tool.uv]
# 将源码目录安装为可编辑包，便于通过模块方式运行
package = true

[tool.uv.sources.fastmcp_email_server]
path = "src"
